--- a/entertainment/inside/movies.html
+++ b/entertainment/inside/movies.html
@@ -29,54 +29,37 @@
 
     <div class="calendar" id="calendar">
 
-        <a href="inside/movies.html" class="rows-box">
-            <div style="display: flex; text-align: center; padding: 10px;">Deva</div>
-        </a>
-        <a href="inside/movies.html" class="rows-box">
-            <div style="display: flex; text-align: center; padding: 10px;">Sky Force</div>
-        </a>
-        <a href="inside/movies.html" class="rows-box">
-            <div style="display: flex; text-align: center; padding: 10px;">Interstellar (2014)</div>
-        </a>
-        <a href="inside/movies.html" class="rows-box">
-            <div style="display: flex; text-align: center; padding: 10px;">Umbarro</div>
-        </a>
-        <a href="inside/movies.html" class="rows-box">
-            <div style="display: flex; text-align: center; padding: 10px;">Fussclass Dabhade</div>
-        </a>
-        <a href="inside/movies.html" class="rows-box">
-            <div style="display: flex; text-align: center; padding: 10px;">Mufasa: The Lion King</div>
-        </a>
-        <a href="inside/movies.html" class="rows-box">
-            <div style="display: flex; text-align: center; padding: 10px;">Ramayana: The Legend of Prince Rama</div>
-        </a>
-        <a href="inside/movies.html" class="rows-box">
-            <div style="display: flex; text-align: center; padding: 10px;">Mukkam Post Devach Ghar</div>
-        </a>
-        <a href="inside/movies.html" class="rows-box">
-            <div style="display: flex; text-align: center; padding: 10px;">Companion</div>
-        </a>
-        <a href="inside/movies.html" class="rows-box">
-            <div style="display: flex; text-align: center; padding: 10px;">Emergency</div>
-        </a>
-        <a href="inside/movies.html" class="rows-box">
-            <div style="display: flex; text-align: center; padding: 10px;">ILU ILU 1998</div>
-        </a>
-        <a href="inside/movies.html" class="rows-box">
-            <div style="display: flex; text-align: center; padding: 10px;">Pushpa 2: The Rule</div>
-        </a>
-        <a href="inside/movies.html" class="rows-box">
-            <div style="display: flex; text-align: center; padding: 10px;">Sonic the Hedgehog 3</div>
-        </a>
-        <a href="inside/movies.html" class="rows-box">
-            <div style="display: flex; text-align: center; padding: 10px;">My Hero Academia: You're Next</div>
-        </a>
-        <a href="inside/movies.html" class="rows-box">
-            <div style="display: flex; text-align: center; padding: 10px;">Marco</div>
-        </a>
-        <a href="inside/movies.html" class="rows-box">
-            <div style="display: flex; text-align: center; padding: 10px;">Moana 2</div>
-        </a>        
+        <button class="rows-box" data-file="../../movies/chhaava.html">
+            <div class="name">Chhaava</div>
+        </button>
+        <button class="rows-box" data-file="../../movies/crazxy.html">
+            <div class="name">CrazXy</div>
+        </button>
+        <button class="rows-box" data-file="../../movies/superboys_of_malegaon.html">
+            <div class="name">Superboys of Malegaon</div>
+        </button>
+        <button class="rows-box" data-file="../../movies/mhkb.html">
+            <div class="name">Mere Husband ki Biwi</div>
+        </button>
+        <button class="rows-box" data-file="../../movies/a_complete_unknown.html">
+            <div class="name">A Complete Unknown</div>
+        </button>
+        <button class="rows-box" data-file="../../movies/chiki_chiki_booboom_boom.html">
+            <div class="name">Chiki Chiki BooBoom Boom</div>
+        </button>
+        <button class="rows-box" data-file="../../movies/aghathiyaa.html">
+            <div class="name">Aghathiyaa</div>
+        </button>
+               
+    </div>
+
+    <div id="popup-modal" class="popup">
+        <div class="popup-content">
+            <span class="close">&times;</span>
+            <div id="popup-body">
+                <!-- Event details will be loaded here -->
+            </div>
+        </div>
     </div>
 
     <div>
@@ -84,6 +67,6 @@
         <p style="justify-content: center; display: flex; font-size: 12px; margin-top: -8px;">&copy; 2025 Sortmyentries. All rights reserved.</p>
     </div>
 
-    <script src="script.js"></script>
+    <script src="../../script.js"></script>
 </body>
 </html>
