--- a/movies/chhaava.html
+++ b/movies/chhaava.html
@@ -10,6 +10,9 @@
     <div class="data">
         <h1>Experience the Grand Historical Saga: Chhaava</h1>
     
+        <img src="../images/chhaava.jpg" class="responsive">
+
+
         <h2>A Cinematic Tribute to History</h2>
         <p>Step into the glorious past with <strong>Chhaava</strong>, an epic historical drama that brings the legendary tale of Chhatrapati Sambhaji Maharaj to life. This cinematic masterpiece promises to be a visual spectacle filled with valor, sacrifice, and an unforgettable narrative that will leave audiences spellbound.</p>
         
